--- a/deploy/local_settings.py.template
+++ b/deploy/local_settings.py.template
@@ -17,7 +17,7 @@ DATABASES = {
         # Set to empty string for localhost. Not used with sqlite3.
         "HOST": "127.0.0.1",
         # Set to empty string for default. Not used with sqlite3.
-        "PORT": "",
+        "PORT": "5432",
     }
 }
 
