increased gunicorn's timeout to 120

--- a/deploy/gunicorn.conf.py.template
+++ b/deploy/gunicorn.conf.py.template
@@ -5,3 +5,4 @@ bind = "127.0.0.1:%(gunicorn_port)s"
 workers = multiprocessing.cpu_count() * 2 + 1
 loglevel = "error"
 proc_name = "%(proj_name)s"
+timeout = 120
