--- a/deploy/local_settings.py.template
+++ b/deploy/local_settings.py.template
@@ -2,7 +2,7 @@ from __future__ import unicode_literals
 
 SECRET_KEY = "%(secret_key)s"
 NEVERCACHE_KEY = "%(nevercache_key)s"
-ALLOWED_HOSTS = ['ebolanews.in',]
+ALLOWED_HOSTS = ['54.72.197.161',]
 
 DATABASES = {
     "default": {
