--- a/deploy/supervisor.conf
+++ b/deploy/supervisor.conf
@@ -2,7 +2,7 @@
 programs=gunicorn_%(proj_name)s
 
 [program:gunicorn_%(proj_name)s]
-command=%(venv_path)s/bin/gunicorn wsgi:application -c gunicorn.conf.py -p gunicorn.pid 
+command=%(venv_path)s/bin/gunicorn wsgi:application -c %(proj_path)s/gunicorn.conf.py -p %(proj_path)s/gunicorn.pid 
 directory=%(proj_path)s
 user=%(user)s
 autostart=true
